# quantum-safe-proxy

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  ADMIN_API_TEST_GUIDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PORT_MAPPING_EXPLAINED.md  README.md  README.openssl35.md  build.rs  config.json.example  docker-compose.openssl35.prod.yml  docker-compose.openssl35.yml  docker-compose.yml  openssl-hybrid.conf  package-lock.json  test_config.json  test_config_and_reload.sh  test_config_file.sh  test_config_priority.sh  test_detailed_non_tls.sh  test_hot_reload.sh  test_non_tls.sh  test_priority.json
docker/: ADMIN-API-SETUP.md  Dockerfile  Dockerfile.openssl35  Dockerfile.oqs  docker-compose.yml
docker/nginx/: combined.conf  nginx.conf  simple.conf
docker/nginx/html/: index.html
docs/: IMPLEMENTATION-COMPLETE.md  README.md  USER-GUIDE-ZH-TW.md  admin-api-trust-boundaries.md  crypto-mode-classification.md  guide.md  phase-10-implementation-notes.md
examples/: config_file.rs  env_vars.rs  hybrid_certs.rs  service_integration.rs  simple_proxy.rs
kubernetes/: deployment.yaml  ingress.yaml  service.yaml
scripts/: build-proxy-with-openssl35.sh  docker-entrypoint.sh  generate-openssl35-certs.sh  generate-oqs-certs.sh  generate-test-certs.sh  generate_certificates.sh  install-oqs-provider.sh  install-oqs.sh  openssl-hybrid.conf  openssl35-install.sh
specs/: quantum-safe-proxy-settings.prd.md
specs/.specify/memory/: constitution.md
specs/001-web-settings-ui/: ANALYSIS-REMEDIATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-web-settings-ui/checklists/: requirements.md
specs/001-web-settings-ui/contracts/: admin-api.yaml
src/: lib.rs  main.rs
src/admin/: audit.rs  auth.rs  config_resolver.rs  error.rs  handlers.rs  html.rs  mod.rs  server.rs  types.rs
src/common/: buffer_pool.rs  error.rs  fs.rs  log.rs  mod.rs  net.rs  types.rs
src/config/: actor.rs  builder.rs  compat.rs  config.rs  defaults.rs  error.rs  loader.rs  manager.rs  merger.rs  mod.rs  source.rs  strategy.rs  traits.rs  types.rs  validator.rs
src/config_backup/: logger.rs  manager.rs  validator.rs
src/crypto/: capabilities.rs  environment.rs  loader.rs  mod.rs  openssl.rs
src/crypto/provider/: capabilities.rs  environment.rs  factory.rs  fallback.rs  mod.rs  openssl.rs  oqs.rs  standard.rs
src/crypto/provider/api/: command_line.rs  factory.rs  mod.rs  openssl_api.rs
src/protocol/: detector.rs  mod.rs
src/proxy/: forwarder.rs  handler.rs  message.rs  mod.rs  server.rs  service.rs
src/tls/: acceptor.rs  cert.rs  mod.rs  strategy.rs
tests/: config_actor_test.rs  config_priority_test.rs  config_test.rs  detailed_non_tls_client.rs  hot_reload_test.rs  integration_test.rs  integration_tests.rs  non_tls_client.rs  proxy_config_compat_test.rs
tests/integration/: admin_api.rs  config_validation.rs  crypto_classification.rs  mod.rs  security_warnings.rs
web/: admin-ui.html
