[package]
name = "quantum-safe-proxy"
version = "0.1.0"
edition = "2021"
description = "PQC-Enabled Sidecar with Hybrid Certificate Support"
authors = ["Jerry <vp780412@gmail.com>"]
license = "MIT"
repository = "https://github.com/JerryR7/quantum-safe-proxy"
keywords = ["proxy", "tls", "pqc", "quantum", "security"]
categories = ["network-programming", "cryptography"]
readme = "README.md"

[[bin]]
name = "quantum-safe-proxy"
path = "src/main.rs"

[[bin]]
name = "check-environment"
path = "src/bin/check-environment.rs"

[dependencies]
# Async runtime with minimal features
tokio = { version = "1.44", features = ["rt-multi-thread", "net", "sync", "time", "signal", "macros", "io-util"] }
# OpenSSL 3.5+ support
openssl = "0.10"
tokio-openssl = "0.6"
# Logging and CLI
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
# Configuration
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
thiserror = "1.0"
anyhow = "1.0"
# Utilities
once_cell = "1.19"



[dev-dependencies]
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
