[package]
name = "quantum-safe-proxy"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "PQC-Enabled Sidecar with Hybrid Certificate Support"
authors = ["Jerry <vp780412@gmail.com>"]
license = "MIT"
repository = "https://github.com/JerryR7/quantum-safe-proxy"
keywords = ["proxy", "tls", "pqc", "quantum", "security"]
categories = ["network-programming", "cryptography"]
readme = "README.md"

[[bin]]
name = "quantum-safe-proxy"
path = "src/main.rs"

[[bin]]
name = "check-environment"
path = "src/bin/check-environment.rs"

[dependencies]
# Async runtime with minimal features
tokio = { version = "1.44", features = ["rt-multi-thread", "net", "sync", "time", "signal", "macros", "io-util"] }
# OpenSSL 3.5+ support
openssl = "0.10"
openssl-sys = "0.9"
tokio-openssl = "0.6"
# Logging and CLI - minimal features
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
clap = { version = "4", default-features = false, features = ["std", "derive"] }
# Configuration - only what we need
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
# Error handling - thiserror is more lightweight than anyhow
thiserror = "1.0"
# Utilities
once_cell = "1.19"
# Efficient buffer management
bytes = "1.5"



[dev-dependencies]
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
