[package]
name = "quantum-safe-proxy"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "PQC-Enabled Sidecar with Hybrid Certificate Support"
authors = ["Jerry <vp780412@gmail.com>"]
license = "MIT"
repository = "https://github.com/JerryR7/quantum-safe-proxy"
keywords = ["proxy", "tls", "pqc", "quantum", "security"]
categories = ["network-programming", "cryptography"]
readme = "README.md"

[[bin]]
name = "quantum-safe-proxy"
path = "src/main.rs"

[[bin]]
name = "check-environment"
path = "src/bin/check-environment.rs"

[dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "net", "sync", "time", "signal", "macros", "io-util"] }
openssl = "0.10"
openssl-sys = "0.9"
tokio-openssl = "0.6"
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
clap = { version = "4", default-features = false, features = ["std", "derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = "1.0"
once_cell = "1.19"
bytes = "1.5"
socket2 = "0.5"
futures = "0.3"
metrics = "0.24.2"

[dev-dependencies]
mockall = "0.12"
serial_test = "3.0"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
